<?xml version="1.0"?>
<package format="2">
  <name>tesseract_monitoring</name>
  <version>0.1.0</version>
  <description>The tesseract_monitoring package</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author >Levi Armstrong</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <exec_depend>rclcpp</exec_depend>
  <depend>eigen</depend>
  <depend>tesseract</depend>
  <depend>tesseract_rosutils</depend>
  <depend>tesseract_msgs</depend>
  <depend>pluginlib</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
