<?xml version="1.0"?>
<package format="2">
  <name>tesseract_rviz</name>
  <version>0.1.0</version>
  <description>The tesseract_rviz package for ROS 2</description>
  <maintainer email="Armstrong@todo.todo">Levi Armstrong</maintainer>
  <license>BSD</license>
  <author >Levi Armstrong</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rviz2</depend>
  <depend>message_generation</depend>
  <depend>pluginlib</depend>
  <depend>interactive_markers</depend>
  <depend>tesseract_msgs</depend>
  <depend>tesseract</depend>
  <depend>tesseract_rosutils</depend>
  <depend>Qt5</depend>
  <depend>libconsole-bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/tesseract_rviz_state_plugin_description.xml"/>
    <rviz plugin="${prefix}/tesseract_rviz_trajectory_plugin_description.xml"/>
    <rviz plugin="${prefix}/tesseract_rviz_manipulation_plugin_description.xml"/>
  </export>
</package>
